[metadata]
name = kalash
author = Product Testing Technica Engineering GmbH
author_email = krzysztof.czarnecki@technica-engineering.de
version = attr: kalash.__version__
url = todo
description = 
    Test runner made for scalable automation
    based on standard `unittest` Python module
long_description = file: README.md
keywords = automation, testing, systems, devices
license = GPLv3
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    pyyaml
    argparse 
    unittest-xml-reporting
    parameterized
    toolz

[options.entry_points]
console_scripts =
    kalash = kalash.run:main_cli

[options.extras_require]
dev = 
    pdoc3
    flake8 
    twine 
    setuptools
    autopep8

[flake8]
exclude = 
    .git,
    __pycache__,
    build,
    dist,
    .tox,
    .nox,
    .pytest_cache
max_complexity = 16
max_line_length = 100
ignore =
    E731
    E116
    E114
    E221
    E241